<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".fragments.MyProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic_IV"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/forty_dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/posts_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts_caps"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/amount_of_posts_TV"
        app:layout_constraintEnd_toStartOf="@+id/follower_TV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile_pic_IV" />

    <TextView
        android:id="@+id/amount_of_posts_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic_IV"
        app:layout_constraintEnd_toEndOf="@id/posts_TV"
        app:layout_constraintStart_toStartOf="@+id/posts_TV"
        app:layout_constraintTop_toTopOf="@id/profile_pic_IV"
        tools:text="2" />

    <TextView
        android:id="@+id/follower_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/amount_of_followers_TV"
        app:layout_constraintEnd_toStartOf="@+id/following_TV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/posts_TV" />

    <TextView
        android:id="@+id/amount_of_followers_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic_IV"
        app:layout_constraintEnd_toEndOf="@id/follower_TV"
        app:layout_constraintStart_toStartOf="@+id/follower_TV"
        app:layout_constraintTop_toTopOf="@id/profile_pic_IV"
        tools:text="1" />

    <TextView
        android:id="@+id/following_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/amount_of_following_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/follower_TV" />

    <TextView
        android:id="@+id/amount_of_following_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic_IV"
        app:layout_constraintEnd_toEndOf="@id/following_TV"
        app:layout_constraintStart_toStartOf="@+id/following_TV"
        app:layout_constraintTop_toTopOf="@id/profile_pic_IV"
        tools:text="1" />

    <TextView
        android:id="@+id/name_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_pic_IV"
        tools:text="Kobe Lobe" />

    <TextView
        android:id="@+id/biography_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/name_TV"
        app:layout_constraintTop_toBottomOf="@id/name_TV"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        tools:text="dsafsdf" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_visits_cardview"
        android:layout_width="160dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:cardCornerRadius="@dimen/twenty_dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/phone_call_cardview"
        app:layout_constraintEnd_toStartOf="@+id/post_views_cardview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/biography_TV">

        <TextView
            android:id="@+id/profile_views_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/profile_visits_ntoday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_of_profile_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/post_views_cardview"
        android:layout_width="160dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:cardCornerRadius="@dimen/twenty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile_visits_cardview"
        app:layout_constraintTop_toTopOf="@id/profile_visits_cardview">

        <TextView
            android:id="@+id/posts_views_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/post_views_ntoday"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_of_posts_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_call_cardview"
        android:layout_width="160dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:cardCornerRadius="@dimen/twenty_dp"
        app:layout_constraintBottom_toTopOf="@+id/email_clicks_cardview"
        app:layout_constraintEnd_toStartOf="@+id/website_cardview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_visits_cardview">

        <TextView
            android:id="@+id/phone_call_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/number_of_phone_nnumber_clicks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_of_phone_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/email_clicks_cardview"
        android:layout_width="160dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:cardCornerRadius="@dimen/twenty_dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_call_cardview">

        <TextView
            android:id="@+id/email_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/number_of_email_nlink_clicks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_of_email_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/website_cardview"
        android:layout_width="160dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:cardCornerRadius="@dimen/twenty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phone_call_cardview"
        app:layout_constraintTop_toTopOf="@+id/phone_call_cardview">

        <TextView
            android:id="@+id/website_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/number_of_website_nlink_clicks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_of_website_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>