<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:guidelineUseRtl="false"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:contentDescription="@string/image_of_post"
            android:padding="@dimen/eight_dp"
            android:src="@drawable/leaf_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            tools:text="Bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:maxLines="2"/>

        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/twenty_dp"
            android:padding="@dimen/two_dp"
            android:src="@drawable/heart_icon"
            android:layout_marginBottom="@dimen/eight_dp"
            android:contentDescription="@string/heart_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/like_count_TV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/like_count_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/eight_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/heart_icon"
            app:layout_constraintVertical_bias="0.0"
            tools:text="80" />

        <ImageView
            android:id="@+id/comment_icon"
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/twenty_dp"
            android:paddingTop="4dp"
            android:contentDescription="@string/comment_icon"
            android:src="@drawable/comment_icon_black"
            android:layout_marginBottom="@dimen/eight_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/comment_count_TV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/like_count_TV"
            app:layout_constraintStart_toStartOf="@id/guideline2"/>

        <TextView
            android:id="@+id/comment_count_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/eight_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/comment_icon"
            tools:text="40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
